--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <h2 class="title is-3 has-text-centered" style="margin-top: 2rem;">Decoded Examples from Different NSD Subjects</h2>
         
         <div id="results-carousel" class="carousel results-carousel">
-            <div class="item">
+            <div class="item" style="box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px;">
               <h3 class="subtitle has-text-centered">
               <div style="font-size: 1rem; margin-bottom: 10px;">
                   50 stimulus-prediction pairs are randomly selected from the test set of NSD Subject 1.
@@ -436,7 +436,7 @@
     <div class="container">
       <h2 class="title is-3 has-text-centered">IBBI Interpretbility Probing</h2>
       <div id="results-carousel" class="carousel results-carousel" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); width: 71%; margin: 0 auto; display: block; text-align: center;">
-        <div class="item item-video1" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1);">
+        <div class="item item-video1" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px;">
           <h2 class="title is-4 has-text-centered">Face ROI</h2>
           <video poster="" id="video1" muted loop preload="metadata">
             <source src="static/videos/face_1.mp4" type="video/mp4">
@@ -452,7 +452,7 @@
           </video>
         </div>
         
-        <div class="item item-video2" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1);">
+        <div class="item item-video2" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px;">
           <h2 class="title is-4 has-text-centered">Body ROI</h2>
           <video poster="" id="video2" muted loop preload="metadata">
             <source src="static/videos/body_1.mp4" type="video/mp4">
@@ -468,7 +468,7 @@
           </video>
         </div>
 
-        <div class="item item-video3" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1);">
+        <div class="item item-video3" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px;">
           <h2 class="title is-4 has-text-centered">Scene ROI</h2>
           <video poster="" id="video3" muted loop preload="metadata">
             <source src="static/videos/scene_1.mp4" type="video/mp4">
@@ -484,7 +484,7 @@
           </video>
         </div>
 
-        <div class="item item-video4" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1);">
+        <div class="item item-video4" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px;">
           <h2 class="title is-4 has-text-centered">Word ROI</h2>
           <video poster="" id="video4" muted loop preload="metadata">
             <source src="static/videos/word_1.mp4" type="video/mp4">
