--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
   <!-- TODO: Replace with your paper title and authors -->
-  <title>PAPER_TITLE - AUTHOR_NAMES | Academic Research</title>
+  <title>Towards Interpretable Visual Decoding with Attention to Brain Representations</title>
   
   <!-- Favicon and App Icons -->
   <link rel="icon" type="image/x-icon" href="static/images/NA_1.ico">
