--- a/index.html
+++ b/index.html
@@ -438,64 +438,64 @@
       <div id="results-carousel" class="carousel results-carousel" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); width: 100%; margin: 0 auto; display: block; text-align: center;">
         <div class="item item-video1" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px;">
           <h2 class="title is-4 has-text-centered">Face ROI</h2>
-          <video poster="" id="video1" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video1" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/face_1.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video1" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video1" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/face_2.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video1" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video1" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/face_3.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video1" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video1" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/face_4.mp4" type="video/mp4">
           </video>
         </div>
         
         <div class="item item-video2" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px;">
           <h2 class="title is-4 has-text-centered">Body ROI</h2>
-          <video poster="" id="video2" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video2" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/body_1.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video2" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video2" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/body_2.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video2" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video2" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/body_3.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video2" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video2" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/body_4.mp4" type="video/mp4">
           </video>
         </div>
 
         <div class="item item-video3" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px;">
           <h2 class="title is-4 has-text-centered">Scene ROI</h2>
-          <video poster="" id="video3" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video3" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/scene_1.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video3" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video3" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/scene_2.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video3" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video3" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/scene_3.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video3" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video3" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/scene_4.mp4" type="video/mp4">
           </video>
         </div>
 
         <div class="item item-video4" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px;">
           <h2 class="title is-4 has-text-centered">Word ROI</h2>
-          <video poster="" id="video4" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video4" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/word_1.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video4" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video4" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/word_2.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video4" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video4" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/word_3.mp4" type="video/mp4">
           </video>
-          <video poster="" id="video4" muted loop preload="metadata" style="pointer-events: none;">
+          <video poster="" id="video4" muted loop preload="metadata" style="pointer-events: none;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
             <source src="static/videos/word_4.mp4" type="video/mp4">
           </video>
         </div>
