add compressed videos

--- a/index.html
+++ b/index.html
@@ -439,64 +439,64 @@
         <div class="item item-video1" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px; pointer-events: none;">
           <h2 class="title is-4 has-text-centered" style="pointer-events: none;">Face ROI</h2>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/face_1.mp4" type="video/mp4">
+            <source src="static/videos/face_1_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/face_2.mp4" type="video/mp4">
+            <source src="static/videos/face_2_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/face_3.mp4" type="video/mp4">
+            <source src="static/videos/face_3_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/face_4.mp4" type="video/mp4">
+            <source src="static/videos/face_4_compressed.mp4" type="video/mp4">
           </video>
         </div>
         
         <div class="item item-video2" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px; pointer-events: none;">
           <h2 class="title is-4 has-text-centered" style="pointer-events: none;">Body ROI</h2>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/body_1.mp4" type="video/mp4">
+            <source src="static/videos/body_1_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/body_2.mp4" type="video/mp4">
+            <source src="static/videos/body_2_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/body_3.mp4" type="video/mp4">
+            <source src="static/videos/body_3_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/body_4.mp4" type="video/mp4">
+            <source src="static/videos/body_4_compressed.mp4" type="video/mp4">
           </video>
         </div>
 
         <div class="item item-video3" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px; pointer-events: none;">
           <h2 class="title is-4 has-text-centered" style="pointer-events: none;">Scene ROI</h2>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/scene_1.mp4" type="video/mp4">
+            <source src="static/videos/scene_1_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/scene_2.mp4" type="video/mp4">
+            <source src="static/videos/scene_2_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/scene_3.mp4" type="video/mp4">
+            <source src="static/videos/scene_3_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/scene_4.mp4" type="video/mp4">
+            <source src="static/videos/scene_4_compressed.mp4" type="video/mp4">
           </video>
         </div>
 
         <div class="item item-video4" style="transition: all 8.1s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 4px 12px rgba(0,0,0,0.2); border-radius: 8px; pointer-events: none;">
           <h2 class="title is-4 has-text-centered" style="pointer-events: none;">Word ROI</h2>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/word_1.mp4" type="video/mp4">
+            <source src="static/videos/word_1_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/word_2.mp4" type="video/mp4">
+            <source src="static/videos/word_2_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/word_3.mp4" type="video/mp4">
+            <source src="static/videos/word_3_compressed.mp4" type="video/mp4">
           </video>
           <video poster="" muted loop playsinline preload="metadata" style="pointer-events: none; width: 100%; height: auto;" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="static/videos/word_4.mp4" type="video/mp4">
+            <source src="static/videos/word_4_compressed.mp4" type="video/mp4">
           </video>
         </div>
 
